--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "nivalis-vercel-tui",
-  "type": "module",
-  "version": "0.1.0",
-  "private": true,
-  "packageManager": "bun@1.2.3",
-  "scripts": {
-    "dev": "bun run --watch src/index.tsx",
-    "lint": "biome check",
-    "lint:fix": "biome check --write",
-    "prepare": "lefthook install",
-    "ts": "tsc --noEmit"
-  },
-  "dependencies": {
-    "turbo": "2.6.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.3.3",
-    "@commitlint/cli": "20.1.0",
-    "@commitlint/config-conventional": "20.0.0",
-    "@nivalis/biome-config": "2.3.3",
-    "@total-typescript/ts-reset": "0.6.1",
-    "@types/node": "22.2.0",
-    "@types/bun": "latest",
-    "lefthook": "2.0.2",
-    "typescript": "5.9.3"
-  }
+	"name": "nivalis-vercel-tui",
+	"type": "module",
+	"version": "0.1.0",
+	"private": true,
+	"packageManager": "bun@1.3.1",
+	"scripts": {
+		"dev": "bun run --watch src/index.tsx",
+		"lint": "biome check",
+		"lint:fix": "biome check --write",
+		"prepare": "lefthook install",
+		"ts": "tsc --noEmit"
+	},
+	"dependencies": {
+		"@opentui/core": "0.1.36",
+		"@opentui/react": "0.1.36"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.4",
+		"@commitlint/cli": "20.1.0",
+		"@commitlint/config-conventional": "20.0.0",
+		"@nivalis/biome-config": "2.3.4",
+		"@total-typescript/ts-reset": "0.6.1",
+		"@types/bun": "latest",
+		"@types/node": "22.2.0",
+		"lefthook": "2.0.2",
+		"typescript": "5.9.3"
+	}
 }
