--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-	"name": "nivalis-vercel-tui",
+	"name": "@nivalis/vercel-tui",
 	"type": "module",
 	"version": "0.1.0",
-	"private": true,
+	"private": false,
+	"publishConfig": {
+		"access": "public"
+	},
 	"packageManager": "bun@1.3.1",
 	"scripts": {
 		"dev": "bun run --watch src/index.tsx",
+		"build": "bun build src/index.tsx --compile --outfile bin/nivalis-vercel-tui",
 		"lint": "biome check",
 		"lint:fix": "biome check --write",
 		"prepare": "lefthook install",
