--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "Terminal UI for managing Vercel deployments",
 	"private": false,
 	"bin": {
-		"vercel-tui": "./bin/vercel-tui"
+		"vercel-tui": "bin/vercel-tui"
 	},
 	"files": ["bin"],
 	"publishConfig": {
