--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"@opentui/react": "0.1.36",
 		"@vercel/sdk": "1.17.0",
 		"open": "10.2.0",
-		"react": "19.2.0"
+		"react": "19.2.0",
+		"zod": "^4.1.12"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.4",
