--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
 	"name": "lazyvercel",
+	"description": "Terminal UI for managing Vercel deployments",
 	"type": "module",
 	"version": "0.8.1",
-	"description": "Terminal UI for managing Vercel deployments",
-	"private": false,
-	"bin": {
-		"lazyvercel": "dist/index.js"
-	},
-	"files": ["dist"],
-	"engines": {
-		"bun": ">=1.3.0"
-	},
+	"license": "MIT",
+	"packageManager": "pnpm@10.23.0",
 	"publishConfig": {
 		"access": "public"
 	},
-	"license": "MIT",
-	"keywords": ["vercel", "tui", "terminal", "deployments", "cli"],
+	"homepage": "https://github.com/nivalis-studio/lazyvercel#readme",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/nivalis-studio/lazyvercel.git"
@@ -23,16 +16,19 @@
 	"bugs": {
 		"url": "https://github.com/nivalis-studio/lazyvercel/issues"
 	},
-	"homepage": "https://github.com/nivalis-studio/lazyvercel#readme",
-	"packageManager": "bun@1.3.2",
+	"keywords": ["vercel", "tui", "terminal", "deployments", "cli"],
+	"bin": {
+		"lazyvercel": "dist/index.js"
+	},
 	"scripts": {
 		"dev": "bun run --watch src/index.tsx",
-		"build": "bun build src/index.tsx --target=bun --outdir dist && chmod +x dist/index.js",
-		"prepublishOnly": "bun run build",
 		"lint": "biome check",
 		"lint:fix": "biome check --write",
+		"test": "bun test",
+		"build": "zshy",
+		"prepack": "zshy",
 		"prepare": "lefthook install",
-		"ts": "tsc --noEmit"
+		"ts": "tsc --noEmit --incremental"
 	},
 	"dependencies": {
 		"@opentui/core": "0.1.47",
@@ -42,16 +38,31 @@
 		"react": "19.2.0",
 		"zod": "4.1.12"
 	},
+	"peerDependencies": {
+		"typescript": "^5"
+	},
 	"devDependencies": {
-		"@biomejs/biome": "2.3.6",
+		"@biomejs/biome": "2.3.7",
 		"@commitlint/cli": "20.1.0",
 		"@commitlint/config-conventional": "20.0.0",
-		"@nivalis/biome-config": "2.3.6",
+		"@nivalis/biome-config": "2.3.7",
 		"@total-typescript/ts-reset": "0.6.1",
-		"@types/bun": "1.3.2",
+		"@types/bun": "1.3.3",
 		"@types/node": "22.2.0",
-		"@types/react": "19.2.6",
 		"lefthook": "2.0.4",
-		"typescript": "5.9.3"
+		"typescript": "5.9.3",
+		"zshy": "0.6.0"
+	},
+	"zshy": "./src/index.tsx",
+	"files": ["dist"],
+	"main": "./dist/index.cjs",
+	"module": "./dist/index.js",
+	"types": "./dist/index.d.cts",
+	"exports": {
+		".": {
+			"types": "./dist/index.d.cts",
+			"import": "./dist/index.js",
+			"require": "./dist/index.cjs"
+		}
 	}
 }
