--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,14 +14,18 @@
 		"noEmit": true,
 		"strict": true,
 		"skipLibCheck": true,
+		"declaration": true,
+		"declarationDir": "dist",
+		"declarationMap": true,
+		"outDir": "dist",
 		"noFallthroughCasesInSwitch": true,
 		"forceConsistentCasingInFileNames": true,
+		"esModuleInterop": true,
 		"resolveJsonModule": true,
+		"isolatedModules": true,
 		"noUncheckedIndexedAccess": true,
-		"noImplicitOverride": true,
-		"noUnusedLocals": false,
-		"noUnusedParameters": false,
-		"noPropertyAccessFromIndexSignature": false,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
 		"paths": {
 			"@/*": ["./*"]
 		},
