--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@opentui/core": "0.1.47",
 		"@opentui/react": "0.1.47",
 		"@vercel/sdk": "1.17.3",
+		"cac": "^6.7.14",
 		"open": "11.0.0",
 		"react": "19.2.0",
 		"zod": "4.1.12"
