--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@total-typescript/ts-reset": "0.6.1",
 		"@types/bun": "1.3.3",
 		"@types/node": "22.2.0",
+		"@types/react": "^19.2.7",
 		"lefthook": "2.0.4",
 		"typescript": "5.9.3",
 		"zshy": "0.6.0"
