--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,17 +6,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
+      - uses: actions/checkout@v6
 
-      - name: Setup bun
-        uses: oven-sh/setup-bun@v2
+      - uses: actions/setup-node@v6
+        with:
+          node-version: "22"
+          registry-url: https://registry.npmjs.org
 
-      - name: Install dependencies
-        run: bun install
+      - uses: pnpm/action-setup@v4
+      - run: pnpm install --frozen-lockfile
+
+      # Ensure npm 11.5.1 or later is installed
+      - name: Ensure npm supports trusted publishing
+        run: npm install -g npm@latest
 
       - name: Build
-        run: bun run build
+        run: pnpm run build
 
-      - name: Publish
-        run: bunx pkg-pr-new publish
+      - name: Publish to npm
+        run: pnpm dlx pkg-pr-new publish
