--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,19 +14,17 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v6
+      - name: Checkout code
+        uses: actions/checkout@v6
 
-      - uses: actions/setup-node@v6
-        with:
-          node-version: "22"
-          registry-url: https://registry.npmjs.org
+      - name: Setup bun
+        uses: oven-sh/setup-bun@v2
 
-      - uses: pnpm/action-setup@v4
-      - run: pnpm install --frozen-lockfile
+      - name: Install dependencies
+        run: bun install
 
-      # Ensure npm 11.5.1 or later is installed
-      - name: Ensure npm supports trusted publishing
-        run: npm install -g npm@latest
+      - name: Check build
+        run: bun run build
 
-      - name: Publish to npm
-        run: npm publish --registry=https://registry.npmjs.org
+      - name: Publish
+        run: bun publish --access public --registry=https://registry.npmjs.org
